--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	  <div class="card">
 		<img src="Hw1.gif" alt="">
 		<div class="info">
-		  <button><a href="https://jack540.github.io/cgHW/hw1.html">Try it</a></button>
+		  <button><a href="https://jack540.github.io/gpHW/Hw1.html">Try it</a></button>
 		  <p>Homework 1</p>
 		</div>
 	  </div>
