--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
 		</div>
 	  </div>
 	</div>
+	
+	<div class="container">
+	  <div class="card">
+		<img src="Hw2.gif" alt="">
+		<div class="info">
+		  <button><a href="https://jack540.github.io/gpHW/Hw2.html">Try it</a></button>
+		  <p>Homework 2</p>
+		</div>
+	  </div>
+	</div>
 
 </body>
 
