--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
 		</div>
 	  </div>
 	</div>
+	
+	<div class="container">
+	  <div class="card">
+		<img src="Hw2_fix.gif" alt="">
+		<div class="info">
+		  <button><a href="https://jack540.github.io/gpHW/Hw2_fix.html">Try it</a></button>
+		  <p>Homework 2 修正</p>
+		</div>
+	  </div>
+	</div>
 
 </body>
 
