--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
 	  </div>
 	</div>
 
+	<div class="container">
+	  <div class="card">
+		<img src="Hw3.gif" alt="">
+		<div class="info">
+		  <button><a href="https://jack540.github.io/gpHW/Hw3.html">Try it</a></button>
+		  <p>Homework 3</p>
+		</div>
+	  </div>
+	</div>
+
 </body>
 
 </html>
