--- a/ar.js-master/three.js/myexamples/minimal0.html
+++ b/ar.js-master/three.js/myexamples/minimal0.html
@@ -138,7 +138,7 @@ function init() {
 	mesh.position.y	= geometry.parameters.height/2
 	arWorldRoot.add( mesh );
 	
-	geometry	= new THREE.TorusKnotGeometry(0.3,0.1,64,16);
+	geometry	= new THREE.SphereGeometry(16, 40, 40);
 	material	= new THREE.MeshNormalMaterial(); 
 	mesh	= new THREE.Mesh( geometry, material );
 	mesh.position.y	= 0.5
