--- a/ar.js-master/three.js/myexamples/Hw5.html
+++ b/ar.js-master/three.js/myexamples/Hw5.html
@@ -197,7 +197,7 @@ function init() {
   //////////////////////////////////////////////////////////////////////////	
   	let size = 10; // halfsize of agent
 
-    agent1 = new Agent(new THREE.Vector3(160*A,0,0), size*A);
+    agent1 = new Agent(new THREE.Vector3(1.5,0,-0.5), size*A);
 	//agent2 = new Agent(new THREE.Vector3(-60*A,0,150*A), size*A);
 	
 	//var axes = new THREE.AxisHelper(1);
