--- a/ar.js-master/three.js/myexamples/index.html
+++ b/ar.js-master/three.js/myexamples/index.html
@@ -14,7 +14,7 @@
 Use <a href="testMarker.png">this testing marker </a>for these demos 
 <hr>
 Checked with both platforms (rewrite in init-animate form)
-<p>1. <a href="HW6.html">minimal0</a></p>
+<p>1. <a href="Hw5.html">minimal0</a></p>
 <p>1. <a href="mobile-performance2.html">mobile performance (smoothControls)</a></p>
 <p>1'. <a href="smoothCompare.html">smooth control</a> Kanji & HIRO, with & WITHOUT smoothedControl</p>
 <p>1“. <a href="mobile-performance2-1.html">scale-and-move</a></p>
