--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
 
 	<div class="container">
 	  <div class="card">
+		<img src="Hw5.gif" alt="">
+		<div class="info">
+		  <button><a href="https://jack540.github.io/gpHW/Hw5/hw5main.html">Try it</a></button>
+		  <p>Homework 5</p>
+		</div>
+	  </div>
+	</div>
+
+	<div class="container">
+	  <div class="card">
 		<img src="Hw4.gif" alt="">
 		<div class="info">
 		  <button><a href="https://jack540.github.io/gpHW/ar.js-master/three.js/myexamples/Hw5.html">Try it</a></button>
@@ -138,18 +148,12 @@
 	<div class="container">
 	  <div class="card">
 		<img src="smile.png" alt="">
-		<div class="info">
-		  <p>Homework 5</p>
-		</div>
 	  </div>
 	</div>
 
 	<div class="container">
 	  <div class="card">
-		<img src="smile.png" alt="">
-		<div class="info">
-		  <p>Homework 5</p>
-		</div>
+		<img src="QRcode.png" alt="">
 	  </div>
 	</div>	
 
