--- a/ar.js-master/three.js/myexamples/index.html
+++ b/ar.js-master/three.js/myexamples/index.html
@@ -23,7 +23,7 @@ Checked with both platforms (rewrite in init-animate form)
 <p>2. <a href="minimal-picker.html">pick-toggle-spin (rayCaster)</a></p>
 <p>3. <a href="minimal-tracer.html">tracer</a></p>
 <p>4. <a href="minimal-HUD-pick2D-corrected.html">2D HUD pick</a> class Button</p>
-<p>5. <a href="markers.html">HW6 Hierarchical Markers with billboard</a></p>
+<p>5. <a href="HW6markers.html">HW6 Hierarchical Markers with billboard</a></p>
 <p>6. <a href="spriteText.html">Sprite</a> using <a href="https://sites.google.com/site/cgwith3js/home/text-rendering">SpriteText</a></p>
 <p>6'. <a href="measure-it.html">measure-it</a>: my version, using <a href="https://sites.google.com/site/cgwith3js/home/text-rendering">SpriteText</a>
 <br>
