--- a/index.html
+++ b/index.html
@@ -159,19 +159,21 @@
 
 	<div class="container">
 	  <div class="card">
-		<video width="500" height="350" controls><source src="video-1590330353.mp4" type="video/mp4"></video>
-	  </div>
-	</div>
-	
-	<div class="container">
-	  <div class="card">
 		<img src="https://i.imgur.com/jHAZJrt.jpg" alt="">
 		<div class="info">
-		  <button><a href="https://jack540.github.io/gpHW/ar.js-master/three.js/myexamples/Hw6.html">Try it</a></button>
+		  <button><a href="https://jack540.github.io/gpHW/Hw6.html">Try it</a></button>
 		  <p>AR Homework 6</p>
 		</div>
 	  </div>
 	</div>	
+
+	<div class="container">
+	  <div class="card">
+		<video width="500" height="350" controls><source src="video-1590330353.mp4" type="video/mp4"></video>
+	  </div>
+	</div>
+	
+
 	
 
 </body>
