--- a/index.html
+++ b/index.html
@@ -159,11 +159,23 @@
 
 	<div class="container">
 	  <div class="card">
-		<img src="https://i.imgur.com/jHAZJrt.jpg" alt="">
+		<img src="pattern-tatung.png" alt="">
 		<div class="info">
-		  <button><a href="https://jack540.github.io/gpHW/Hw6.html">Try it</a></button>
+		  <button><a href="https://jack540.github.io/gpHW/ar.js-master/three.js/myexamples/HW6markers.html">Try it</a></button>
 		  <p>AR Homework 6</p>
 		</div>
+	  </div>
+	</div>
+
+	<div class="container">
+	  <div class="card">
+		<img src="pattern-tatung.png" alt="">
+	  </div>
+	</div>
+
+	<div class="container">
+	  <div class="card">
+		<img src="pattern-tatung.png" alt="">
 	  </div>
 	</div>	
 
