--- a/ar.js-master/three.js/myexamples/HW6markers.html
+++ b/ar.js-master/three.js/myexamples/HW6markers.html
@@ -267,7 +267,7 @@ function addMarkerKanji () {
 	let loader1 = new THREE.TextureLoader();
 	loader1.setCrossOrigin('')
 
-	let texture1 = loader1.load( 'https://i.imgur.com/ZRSTPWP.png' );//大同大學
+	let texture1 = loader1.load( 'https://i.imgur.com/93hLIlk.png' );//大同大學
 	
 	let material1 = new THREE.MeshBasicMaterial( { 
 		map: texture1,
